src/sass/app.scss
@import "_normalize";
@import "_variables";

body {
  font-family: 'Source Sans Pro', sans-serif;
}

// ****************************************** //
/* Navigation */
.navbar {

  .nav-link {
    font-size: 1.1rem;
    transition: .2s;
    border-bottom: 2px solid transparent;

    &:hover {
      border-bottom: 2px solid #ccc;
    }
  }
  .nav-link.active {
    border-bottom: 2px solid #e31f52;
  }

  .btn-separator {
    font-size: 2rem;
    vertical-align: middle;
    margin: 0 20px;
  }

  .btn-navbar {
    border-radius: 30rem;
    border: 2px solid;
    border-color: #e31f52;
    background: #e31f52;
    color: #fff !important;
    transition: .3s;

    &:hover {
      background: #ba1a44;
    }

    &:focus {
      box-shadow: none;
    }
  }
  .btn-add {
    background-color: #007bff;
    border-color: #007bff;
    color: #fff !important;

    &:hover {
      background: #0062cc;
      color: #fff;
    }
  }
}

// ****************************************** //
/* Footer */
.footer {
  background-color: black;
  color: #fff;
  padding: 50px 0 20px 0;
  box-sizing: content-box;

  .footer-social {
    text-align: center;
    padding: 40px 0;

    .fab {
      margin: 0 15px;
      color: #e21a4e;
      transition: .2s;

      &:hover {
        color: #b91640;
      }
    }
  }
  .footer-legal {
    text-align: center;
    padding: 20px 0;
  }
}

